--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,25 @@ html {
   font-family: Roboto;
 }
 
+input {
+    width: 200px;
+}
+
+.button {
+    color: #828FAB;
+    background-color: #e7dece;
+    border: 1px solid #828FAB;
+    text-transform: uppercase;
+    padding: 10px;
+    text-decoration: none;
+    font-size:16px;
+}
+
+form textarea {
+    min-height: 500px;
+    min-width: 60%;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -38,7 +57,15 @@ html {
 nav {
     text-align: center;
     min-height: 60px;
+    margin-top: 20px;
     /* background-color: #f7f4ed; */
+}
+
+nav.reports a {
+    /* padding-top: 20px; */
+    color: black;
+    padding: 20px;
+    font-family: "Playfair Display";
 }
 
 ul {
