--- a/src/App.css
+++ b/src/App.css
@@ -126,3 +126,46 @@ li a:hover {
     transform: rotate(360deg);
   }
 }
+
+/* chat design */
+.all-messages {
+    width: 100%;
+    height: 30vh;
+    text-align: left;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin: auto;
+    margin-bottom: 2rem;
+    width: 70%;
+    height: 300px;
+    overflow:scroll;
+    overflow-x:hidden;
+}
+
+.all-messages p {
+    width: 100%;
+}
+
+.all-messages p:nth-child(1n) {
+    background-color: #faf8f2;
+    padding: 5px 10px;
+    margin: 0 auto;
+}
+
+.all-messages p:nth-child(2n) {
+    background-color: #f0e9dd;
+}
+
+.chatscroll {
+    /* overflow:scroll;
+    overflow-x:hidden; */
+}
+
+.new-message {
+    width: 50%;
+    height: 5vh;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-bottom: 2rem;
+    font-size: 1.2rem;
+}
