--- a/src/App.css
+++ b/src/App.css
@@ -166,6 +166,6 @@ li a:hover {
     height: 5vh;
     border: 1px solid #ccc;
     border-radius: 4px;
-    margin-bottom: 2rem;
+    /* margin-bottom: 2rem; */
     font-size: 1.2rem;
 }
